[package]
name = "mailproc"
version = "0.2.1"
authors = ["Todd Mortimer <todd@opennet.ca>"]
edition = "2018"
description = "Process email based on contents, like procmail."
repository = "https://github.com/mordak/mailproc"
readme = "README.md"
keywords = ["procmail", "email"]
categories = ["command-line-utilities", "email"]
license = "MIT"

[dependencies]
mailparse = "0.6.4"
toml = "0.4.10"
regex = "1.1.0"
serde = "1.0.86"
serde_derive = "1.0.86"
dirs = "1.0.4"
subprocess = "0.1.18"
structopt = "0.2.15"
log = "0.4.6"
simplelog = "0.5.3"
fs2 = "0.4.3"
