[package]
name = "mailproc"
version = "0.3.1"
authors = ["Todd Mortimer <todd@opennet.ca>"]
edition = "2018"
description = "Process email based on contents, like procmail."
repository = "https://github.com/mordak/mailproc"
readme = "README.md"
keywords = ["procmail", "email"]
categories = ["command-line-utilities", "email"]
license = "MIT"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
mailparse = "0.13.1"
toml = "0.5.8"
regex = "1.4.3"
serde = "1.0.123"
serde_derive = "1.0.123"
dirs-next = "2.0.0"
subprocess = "0.2.6"
structopt = "0.3.21"
log = "0.4.14"
simplelog = "0.9.0"
fs2 = "0.4.3"
