[package]
name = "mailproc"
version = "0.3.2"
authors = ["Todd Mortimer <todd@opennet.ca>"]
edition = "2018"
description = "Process email based on contents, like procmail."
repository = "https://github.com/mordak/mailproc"
readme = "README.md"
keywords = ["procmail", "email"]
categories = ["command-line-utilities", "email"]
license = "MIT"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
mailparse = "0.14.0"
toml = "0.5.10"
regex = "1.7.0"
serde = "1.0.151"
serde_derive = "1.0.151"
dirs-next = "2.0.0"
subprocess = "0.2.9"
structopt = "0.3.26"
log = "0.4.17"
simplelog = "0.12.0"
fs2 = "0.4.3"
